<resources>
    <string name="app_name">우주라이트</string>
    <string name="app_name_en">Would U Write?</string>
    <string name="app_ad_attribution">AD</string>
    <string name="play_store_app">market://details?id=%1$s</string>
    <string name="play_store_web">https://play.google.com/store/apps/details?id=%1$s</string>
    <string-array name="products">
        <item name="basic">basic</item>
        <item name="pro">pro</item>
    </string-array>
    <string name="format_string">%1$s</string>
    <string name="format_home_filter_type">#%1$s</string>
    <string name="format_month">%1$s월</string>
    <string name="format_day">%1$d일</string>
    <string name="format_price">%1$s원</string>
    <string name="format_price_plus">+%1$s원</string>
    <string name="format_price_minus">-%1$s원</string>
    <string name="format_price_plus_short">+%1$s</string>
    <string name="format_price_minus_short">-%1$s</string>
    <string name="format_date">%1$s ~ %2$s</string>
    <string name="format_date_with_bracket">(%1$s ~ %2$s)</string>
    <string name="format_date_with_new_line">%1$s ~ \n%2$s</string>
    <string name="format_date_year_month">%1$d년 %2$d월</string>
    <string name="format_name">%1$s님</string>
    <string name="format_marker_category">%1$s 외 %2$d건</string>
    <string name="format_spending_of_month">%1$s월 소비</string>
    <string name="format_budget">%1$d%%</string>
    <string name="format_week">%1$d주차</string>
    <string name="format_average_month">"한 주에 평균\n%1$s원 을\n사용하고 있어요."</string>
    <string name="format_count_01">%1$d건</string>
    <string name="format_count_02">(%1$d건/%2$d건)</string>
    <string name="format_count_03">합계(%1$d건)</string>
    <string name="format_total_transaction">\/ %1$d건</string>
    <string name="format_input">"%1$s\n입력하기"</string>
    <string name="format_input_hint">%1$s을(를) 입력해주세요.</string>
    <string name="format_user">%1$s님</string>
    <string name="format_usage">%1$d%%</string>
    <string name="format_invite_name">%1$s님이 보낸 초대장이 도착했어요!</string>
    <string name="format_invite_link">https://woozoora/invite?user_name=%1$s&amp;user_id=%2$s</string>
    <string name="format_sms_to">smsto:%1$s</string>
    <string name="format_shared_transaction">"%1$s님과 함께\n공유 가계부를 작성해보세요!"</string>
    <string name="format_weekly_notification_title">주간 지출(%1$s~%2$s)</string>
    <string name="format_spending">지출 금액: %1$s원</string>
    <string name="format_category">%1$s: %2$s원(%3$d건)</string>
    <string name="format_delete_category">카테고리 %1$d개 삭제</string>
    <string name="format_delete_category_detail">%1$d개의 카테고리를 삭제하시겠습니까?</string>
    <string name="category_food_expenses">식비</string>
    <string name="category_transportation">교통/차량</string>
    <string name="category_cultural_life">문화생활</string>
    <string name="category_mart">마트/편의점</string>
    <string name="category_fashion">패션/미용</string>
    <string name="category_household_goods">생활용품</string>
    <string name="category_telecommunication">주거/통신</string>
    <string name="category_health">건강</string>
    <string name="category_education">교육</string>
    <string name="category_membership_fees">경조사/회비</string>
    <string name="category_parents">부모님</string>
    <string name="category_etc">기타</string>
    <string name="category_cafe">카페</string>
    <string name="category_baby">육아</string>
    <string name="category_medical">의료</string>
    <string name="category_loan">대출</string>
    <string name="category_insurance">보험</string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="monday_short">월</string>
    <string name="tuesday_short">화</string>
    <string name="wednesday_short">수</string>
    <string name="thursday_short">목</string>
    <string name="friday_short">금</string>
    <string name="saturday_short">토</string>
    <string name="sunday_short">일</string>
    <string name="empty" />
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="next">다음</string>
    <string name="authenticate">인증하기</string>
    <string name="start">시작하기</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="hundreds">00</string>
    <string name="daily">오늘</string>
    <string name="this_week">이번 주</string>
    <string name="this_month">이번 달</string>
    <string name="weekly">주간</string>
    <string name="monthly">월간</string>
    <string name="cash">현금</string>
    <string name="card">카드</string>
    <string name="budget_spending">예산소비</string>
    <string name="category">카테고리</string>
    <string name="total_spending">소비 합계</string>
    <string name="personal_spending">개인 소비</string>
    <string name="group_spending">그룹 소비</string>
    <string name="home">우주라이트</string>
    <string name="history">가계부</string>
    <string name="statistic">통계</string>
    <string name="more">더보기</string>
    <string name="register">등록하기</string>
    <string name="edit">수정하기</string>
    <string name="edit_short">수정</string>
    <string name="time">시간</string>
    <string name="date">날짜</string>
    <string name="memo">메모</string>
    <string name="input">입력하기</string>
    <string name="option">(선택사항)</string>
    <string name="check">확인</string>
    <string name="timeline">타임라인</string>
    <string name="group">그룹</string>
    <string name="invite">초대하기</string>
    <string name="notification">알림</string>
    <string name="ask">의견 보내기</string>
    <string name="service_center">고객센터</string>
    <string name="policy">약관 및 정책</string>
    <string name="notice">공지사항</string>
    <string name="terms">개인정보 보호정책</string>
    <string name="sign_out">로그아웃</string>
    <string name="premium">프리미엄 구매</string>
    <string name="transfer">전달하기</string>
    <string name="today">오늘</string>
    <string name="profile">프로필</string>
    <string name="membership">회원번호</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="budget">예산</string>
    <string name="birth_year">태어난 년도</string>
    <string name="change_short">변경</string>
    <string name="change">변경하기</string>
    <string name="delete">삭제</string>
    <string name="communication">개발자와 소통하기</string>
    <string name="question">Q</string>
    <string name="answer">A</string>
    <string name="enter_the_code">코드 입력하기</string>
    <string name="copy">복사</string>
    <string name="spending">소비</string>
    <string name="asset">수입</string>
    <string name="try_again_after_a_while">잠시 후 다시 시도해주세요.</string>
    <string name="which_way_are_you_more_comfortable_getting_started_with">"어떤\n방법으로\n인증하는 것이\n더 편하신가요?"</string>
    <string name="enter_your_budget_for_this_month">한 달\n평균 예산을\n입력해주세요.</string>
    <string name="enter_your_birth_year">태어난 년도를\n입력해주세요.</string>
    <string name="select_a_sign_in_method">로그인 방식을 선택해주세요.</string>
    <string name="enter_your_budget">예산을 입력해주세요.</string>
    <string name="user_information_cannot_be_verified">사용자 정보를 확인할 수 없습니다.</string>
    <string name="invalid_user_information">잘못된 사용자 정보입니다.</string>
    <string name="use_it_with">%1$s님과 함께 기록하고 있어요 :D</string>
    <string name="have_a_nice_day">좋은 하루에요 :)</string>
    <string name="invite_loved_ones_to_record_together">"함께 기록할\n소중한 사람을\n초대하세요."</string>
    <string name="most_spent_hash_tag_of_month">"#%1$s\n#이 달의 소비왕\n#나야나\n#아껴써요\n#우주라이트"</string>
    <string name="most_spent_hash_tag_of_week">"#%1$s\n#이 주의 소비왕\n#나야나\n#아껴써요\n#우주라이트"</string>
    <string name="budget_of_month">한달 예산</string>
    <string name="invite_to_group">그룹 초대하기</string>
    <string name="invite_to_group_short">그룹 초대</string>
    <string name="most_spent_weekday">#가장 많이 소비한 요일</string>
    <string name="most_spent_category">#가장 많이 소비한 카테고리</string>
    <string name="rank_first">1위</string>
    <string name="register_household_account_book">등록된 가계부가 없어요.</string>
    <string name="new_account">새 가계부</string>
    <string name="account_edit">가계부 편집</string>
    <string name="account_registration">가계부 등록</string>
    <string name="transaction_name">결제 내용</string>
    <string name="transaction_price">결제 금액</string>
    <string name="transaction_method">결제 방법</string>
    <string name="transaction_name_no_spacing">결제내용</string>
    <string name="transaction_price_no_spacing">결제금액</string>
    <string name="transaction_method_no_spacing">결제방법</string>
    <string name="asset_name">수입 내용</string>
    <string name="asset_price">수입 금액</string>
    <string name="asset_method">수입 방법</string>
    <string name="asset_name_no_spacing">수입내용</string>
    <string name="asset_price_no_spacing">수입금액</string>
    <string name="asset_method_no_spacing">수입방법</string>
    <string name="enter_the_content">내용을 입력하세요.</string>
    <string name="enter_the_price">금액을 입력하세요.</string>
    <string name="enter_the_memo">메모를 입력하세요.</string>
    <string name="enter_the_date">날짜를 입력하세요.</string>
    <string name="enter_the_time">시간을 입력하세요.</string>
    <string name="enter_your_ask">여러분의 소중한 의견을 기다립니다:)</string>
    <string name="complete_registration">등록완료</string>
    <string name="account_has_been_successfully_registered">가계부가 성공적으로 등록되었습니다.</string>
    <string name="what_day_did_you_consume_the_most_this_month">"이번 달 주로\n소비한 요일은?"</string>
    <string name="what_category_did_you_consume_the_most_this_month">"이번 달 주로\n소비한 카테고리는?"</string>
    <string name="statistics_of_monthly">주차별 소비 통계</string>
    <string name="statistics_of_category">카테고리별 소비 통계</string>
    <string name="spending_of_this_month">이달의 소비 금액</string>
    <string name="spending_of_today">오늘의 소비 금액</string>
    <string name="asset_of_this_month">이달의 수입 금액</string>
    <string name="asset_of_today">오늘의 수입 금액</string>
    <string name="count_of_transaction">소비건수</string>
    <string name="select_month">월 선택하기</string>
    <string name="maximum_spending">최대지출금액</string>
    <string name="minimum_spending">최소지출금액</string>
    <string name="default_notification">기본 알림</string>
    <string name="register_transaction_notification">새 가계부 알림</string>
    <string name="daily_transaction_notification">매일 가계부 알림</string>
    <string name="weekly_transaction_notification">주간 지출 알림</string>
    <string name="notice_notification">공지사항 알림</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="woozoora_invitation">우주라이트 초대장!</string>
    <string name="connect_via_the_link_below">아래 링크를 통해 접속해주세요.</string>
    <string name="prefix_invite_link">https://woulduwrite.page.link</string>
    <string name="invite_warning">※ 신규 사용자의 경우 위 링크로 앱을 설치하시고 플레이스토어에서 앱을 실행하셔야 합니다.</string>
    <string name="invitation_has_arrived">초대장이 도착했어요</string>
    <string name="transfer_to_shared_transaction">"이미 작성하신 가계부를\n공유 가계부로 이전하시겠습니까?"</string>
    <string name="no_use_it_alone">아니요, 혼자 쓸게요..</string>
    <string name="yes_use_it_together">네, 함께 쓸게요!</string>
    <string name="try_to_record_your_spending_today">오늘의 지출 현황을 기록하셨나요? :)</string>
    <string name="thank_you_for_your_valuable_feedback">소중한 의견 감사드립니다:)</string>
    <string name="you_will_not_be_able_to_use_the_invitation">권한을 허용하시고 초대 기능을 이용해보세요 :)</string>
    <string name="no_new_notifications">새로운 알림이 없어요.</string>
    <string name="no_notice">공지사항이 없어요.</string>
    <string name="notification_will_be_automatically_deleted_after_30_days">알림은 30일 후 자동 삭제 됩니다.</string>
    <string name="let_you_know_when_new_announcements_arrive">새로운 공지가 도착하면 알려드릴게요!</string>
    <string name="use_transaction_time">지출 시간 사용</string>
</resources>