<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.kxxcn.woozoora.ui.direction.more.MoreViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/group_icon"
            android:layout_width="@dimen/more_icon_size"
            android:layout_height="@dimen/more_icon_size"
            android:background="@drawable/round_oval_blue"
            android:padding="@dimen/more_icon_padding"
            android:src="@drawable/ic_woozoora"
            app:layout_constraintBottom_toBottomOf="@id/group_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/group_text"
            app:tint="@color/white01"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/group_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/font_nexon_regular"
            android:paddingVertical="10dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryBlue"
            android:textSize="@dimen/more_header_text_size"
            app:layout_constraintStart_toEndOf="@id/group_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/premium_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_nexon_light"
            android:paddingVertical="10dp"
            android:text="@string/premium"
            android:textColor="@color/secondaryBlack"
            android:textSize="@dimen/more_content_text_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/group_text"
            app:layout_constraintTop_toBottomOf="@id/group_text" />

        <TextView
            android:id="@+id/invite_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_nexon_light"
            android:onClick="@{() -> viewModel.contact()}"
            android:paddingVertical="10dp"
            android:text="@string/invite_to_group_short"
            android:textColor="@color/secondaryBlack"
            android:textSize="@dimen/more_content_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/group_text"
            app:layout_constraintTop_toBottomOf="@id/premium_text" />

        <TextView
            android:id="@+id/notice_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_nexon_light"
            android:onClick="@{() -> viewModel.notice()}"
            android:paddingVertical="10dp"
            android:text="@string/notice"
            android:textColor="@color/secondaryBlack"
            android:textSize="@dimen/more_content_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/group_text"
            app:layout_constraintTop_toBottomOf="@id/invite_text" />

        <TextView
            android:id="@+id/use_transaction_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_nexon_light"
            android:onClick="@{() -> viewModel.setUsageTransactionTime()}"
            android:paddingVertical="10dp"
            android:text="@string/use_transaction_time"
            android:textColor="@color/secondaryBlack"
            android:textSize="@dimen/more_content_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/notice_text"
            app:layout_constraintTop_toBottomOf="@id/notice_text" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> viewModel.setUsageTransactionTime()}"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toBottomOf="@id/use_transaction_time_text"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/use_transaction_time_text"
            app:lottie_autoPlay="false"
            app:lottie_fileName="lottie_toggle.json"
            app:lottie_loop="false"
            app:lottie_toggle="@{viewModel.usageTransactionTime}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
